# rust-saas-backend

./: .env.example  Cargo.toml  EXAMPLES.md  HEALTH_USAGE.md  PACKAGE_USAGE.md  README.md  TODO.md  USAGE.md
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/migration/: m20260219_000001_create_users_table.rs  mod.rs
src/modules/health/: handler.rs  routes.rs
src/modules/users/: entity.rs  handler.rs  mod.rs  routes.rs
