[package]
name = "rust-saas-boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Production-grade Rust SaaS boilerplate - A complete starter template for building SaaS applications with authentication, user management, and more"
license = "MIT"
repository = "https://github.com/HardikKSavaliya/rust-saas-backend"
keywords = ["saas", "boilerplate", "starter", "template", "backend"]
categories = ["web-programming", "authentication", "api-bindings"]

[lib]
name = "rust_saas_boilerplate"
path = "src/lib.rs"

[[bin]]
name = "rust-saas-boilerplate"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Common types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# For .env support
dotenvy = "0.15.7"
config = "0.15.19"

# Development dependencies
[dev-dependencies]
# Add test dependencies here if needed